--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2000-01-24  Thomas Tanner  <tanner@ffii.org>
+
+	fix severe bugs reported by Elrond <Elrond@Wunder-Nett.org>
+
+	* ltconfig.in: replace $objdir with $output_objdir
+
+	* ltmain.in: change to the builddir before relinking programs
+
+	* ltmain.in, ltconfig.in, libtool.m4, ltdl.m4:
+	  remove unnessary spaces from line endings
+
 2000-01-19  Thomas Tanner  <tanner@ffii.org>
 
 	* ltmain.in: rewrite of the ILD code, merge linking code for
