--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2000-01-28  Gary V. Vaughan  <gary@oranda.demon.co.uk>
 
+	* libltdl/ltdl.h (lt_dlrealloc): Added declaration.
+	* libltdl/ltdl.c (lt_dlrealloc): Added default definition.
+	
 	* libltdl/ltdl.c (lt_dlseterror): Catch errorcodes below 0 as
 	invalid.
 	* libltdl/ltdl.h (LTDL_ERROR): Added missing '_' in K&R
