--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2000-01-30  Ossama Othman  <ossama@debian.org>
+
+	* libtool.m4 (lt_cv_cc_needs_belf): Set the test language to C
+	prior to executing the test that checks if the C compiler needs
+	"-belf."
+	Reported by Chris Butler <chrisb@sandy.force9.co.uk>
+
 2000-01-28  Gary V. Vaughan  <gary@oranda.demon.co.uk>
 
 	* libtool.m4 (AC_DEPLIBS_CHECK_METHOD):  Use changequote to
