--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2000-02-01  Thomas Tanner  <tanner@ffii.org>
+
+	* ltmain.in: support -dlopen/dlpreopen for libraries
+	* NEWS: updated
+	* TODO: updated
+	* ltmain.in: rename dlopen to dlopen_support
+	* ltconfig.in: ditto
+	* doc/libtool.texi: ditto
+
+	* ltmain.in: check whether libraries are moved out of $libdir,
+	  replace .a and .lib with .$libext, .o and .obj with .$objext
+
 2000-01-31  Gary V. Vaughan  <gary@oranda.demon.co.uk>
 
 	* libltdl/ltdl.h (lt_dlrealloc): removed declaration.
