--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2000-02-02  Thomas Tanner  <tanner@ffii.org>
+
+	* libltdl/ltdl.c: replace NULL with 0, remove unused system
+	  and app_private pointers from lt_dlhandle_t
+	* libltdl/ltdl.c (presym_add_list): new preloaded symbols
+	  don't need to be added to the end
+	  
+	* libltdl/ltdl.c (lt_dlgetdata, lt_dlsetdata): removed
+	* libltdl/ltdl.h: ditto
+	* doc/libtool.texi (libltdl interface): ditto
+	
 2000-02-01  Thomas Tanner  <tanner@ffii.org>
 
 	* ltmain.in: support -dlopen/dlpreopen for libraries
